# docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "1.0"
     },
     "host": "127.0.0.1:8080",
-    "basePath": "/api/v1",
+    "basePath": "/",
     "paths": {
         "/purchase": {
             "post": {
@@ -85,7 +85,7 @@
                     {
                         "type": "integer",
                         "description": "ID of article to query",
-                        "name": "articleId",
+                        "name": "x",
                         "in": "query",
                         "required": true
                     }
